apportate modifiche insignificanti

--- a/ManipolazioneDom1/Manipolazione1.html
+++ b/ManipolazioneDom1/Manipolazione1.html
@@ -12,6 +12,6 @@
       <button onclick="addProduct()">Aggiungi</button>
       <ul></ul>
     </div>
-    <script src="Manipolazion1.js"></script>
+    <script src="Manipolazione1.js"></script>
   </body>
 </html>
